--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Qwitcher+Grypen&display=swap");
 * {
   margin: 0px;
   padding: 0px;
@@ -5,3 +6,59 @@
 
 body {
   background-image: url(../img/fondo); }
+
+.mainnosotros h1, .maintienda h1 {
+  text-align: center;
+  font-family: sans-serif;
+  font-size: 40px; }
+
+header .fondoheaderandfooter {
+  background-image: linear-gradient(to right, rgba(31, 30, 30, 0.89), rgba(0, 0, 0, 0.568)); }
+
+header .banner1 {
+  width: 99,5vw;
+  padding-top: 2px; }
+
+header .carrito {
+  display: flex;
+  width: 35px;
+  height: 30px;
+  margin: 5px; }
+
+header .lupa {
+  width: 35px; }
+
+footer .fondoheaderandfooter {
+  background-image: linear-gradient(to right, rgba(31, 30, 30, 0.89), rgba(0, 0, 0, 0.568)); }
+
+.mainnosotros .almacen {
+  margin: 5px;
+  width: 400px;
+  height: 50vh; }
+
+.mainnosotros .ubicacion {
+  margin: 5px 0px 5px 0px;
+  padding: 5px; }
+
+.mainnosotros .ubicolortamanio {
+  width: 50vw;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.568), rgba(31, 30, 30, 0.89)); }
+
+.mainnosotros h1 {
+  background-color: gray;
+  color: white; }
+
+.maintienda .colorcard {
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.568), rgba(31, 30, 30, 0.89)); }
+
+.maintienda .cardsstyle {
+  padding: 10px;
+  display: flex;
+  justify-content: space-around; }
+
+.maintienda h1 {
+  background-color: gray;
+  color: white; }
+
+.maintienda .tamaniocard {
+  width: 99vw; }
