--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,3 +19,4 @@ body{
 @import "./secciones/footer";
 @import "./secciones/nosotros";
 @import "./secciones/maintienda";
+@import "./secciones/pyp-tyc";
