--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
   background-image: url(../img/fondo); }
 
-.mainnosotros h1, .maintienda h1 {
+.mainnosotros h1, .maintienda h1, .mainlegal h1 {
   text-align: center;
   font-family: sans-serif;
   font-size: 40px; }
@@ -34,11 +34,7 @@ footer .fondoheaderandfooter {
 .mainnosotros .almacen {
   margin: 5px;
   width: 400px;
-  height: 50vh; }
-
-.mainnosotros .ubicacion {
-  margin: 5px 0px 5px 0px;
-  padding: 5px; }
+  height: 40vh; }
 
 .mainnosotros .ubicolortamanio {
   width: 50vw;
@@ -62,3 +58,17 @@ footer .fondoheaderandfooter {
 
 .maintienda .tamaniocard {
   width: 99vw; }
+
+.headerlegal {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .headerlegal li {
+    list-style: none; }
+    .headerlegal li a {
+      text-decoration: none;
+      color: black; }
+
+.mainlegal h1 {
+  background-color: gray;
+  color: white; }
