--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,3 +20,4 @@ body{
 @import "./secciones/nosotros";
 @import "./secciones/maintienda";
 @import "./secciones/pyp-tyc";
+@import "./secciones/contacto";
