--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,3 +21,4 @@ body{
 @import "./secciones/maintienda";
 @import "./secciones/pyp-tyc";
 @import "./secciones/contacto";
+@import "./secciones/carritocompra";
