--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 body {
   background-image: url(../img/fondo); }
 
-.mainnosotros h1, .maintienda h1, .mainlegal h1, .maincontacto h1 {
+.mainnosotros h1, .maintienda h1, .mainlegal h1, .maincontacto h1, .maincarrito h1 {
   text-align: center;
   font-family: sans-serif;
   font-size: 40px; }
@@ -32,8 +32,28 @@ header .logo {
   width: 9rem;
   height: 7rem; }
 
+header li:hover {
+  font-size: 25px;
+  color: red; }
+
 footer .fondoheaderandfooter {
   background-image: linear-gradient(to right, rgba(31, 30, 30, 0.89), rgba(0, 0, 0, 0.568)); }
+
+footer .wsp {
+  position: fixed;
+  width: 55px;
+  height: 50px;
+  bottom: 30px;
+  right: 0;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 0px 1px 10px;
+  z-index: 2; }
+
+footer .wsp:hover {
+  width: 75px;
+  height: 70px; }
 
 .mainnosotros .almacen {
   margin: 5px;
@@ -49,9 +69,7 @@ footer .fondoheaderandfooter {
   color: white; }
 
 .mainnosotros .sobrenosotros {
-  flex-wrap: wrap;
-  padding-left: 2rem;
-  padding-right: 2rem; }
+  font-family: Arial, Helvetica, sans-serif; }
 
 .maintienda .colorcard {
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.568), rgba(31, 30, 30, 0.89)); }
@@ -93,3 +111,15 @@ footer .fondoheaderandfooter {
   .maincontacto h1 {
     background-color: gray;
     color: white; }
+
+.maincarrito img {
+  padding-top: 60px;
+  padding-bottom: 4rem;
+  width: 50rem; }
+
+.maincarrito h1 {
+  background-color: gray;
+  color: white; }
+
+.maincarrito .tamaniocard {
+  width: 99vw; }
