--- a/scss/secciones/_header.scss
+++ b/scss/secciones/_header.scss
@@ -19,5 +19,9 @@ padding-top: 2px;
         width: 9rem;
         height: 7rem;
     }
-
+ li:hover{
+    
+    font-size: 25px;
+    color: red;
+ }
 }
