--- a/scss/secciones/_carritocompra.scss
+++ b/scss/secciones/_carritocompra.scss
@@ -1,8 +1,8 @@
 .maincarrito{
     img{
-        padding-top: 60px;
+        padding-top: 50px;
         padding-bottom: 4rem;
-        width: 50rem;
+        width: 50%;
     }
     h1{
         @extend %titulos;
