--- a/scss/secciones/_pyp-tyc.scss
+++ b/scss/secciones/_pyp-tyc.scss
@@ -24,3 +24,20 @@ li{
    margin-top: 1rem;
 }
 }
+.wsp{
+    position: fixed;
+    width: 55px;
+    height: 50px;
+    bottom: 30px;
+    right: 0;
+    border-radius: 50px;
+    text-align: center;
+    font-size: 30px;
+    box-shadow: 0px 1px 10px ;
+    z-index: 2;
+}
+.wsp:hover{
+    width: 75px;
+    height: 70px;
+
+}
