--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,14 @@ footer .wsp:hover {
 .mainnosotros .almacen {
   flex-wrap: wrap;
   margin: 5px;
-  width: 400px;
+  width: 25%;
   height: 40vh; }
 
 .mainnosotros .ubicolortamanio {
-  width: 50vw;
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0.568), rgba(31, 30, 30, 0.89)); }
+
+.mainnosotros .cardubi {
+  padding-left: 35%; }
 
 .mainnosotros h1 {
   background-color: gray;
