--- a/css/style.css
+++ b/css/style.css
@@ -49,8 +49,9 @@ footer .wsp {
   position: fixed;
   width: 55px;
   height: 50px;
+  line-height: 50px;
   bottom: 30px;
-  right: 1;
+  right: 0;
   border-radius: 50px;
   text-align: center;
   font-size: 30px;
