--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -7,8 +7,9 @@ footer{
         position: fixed;
         width: 55px;
         height: 50px;
+        line-height: 50px;
         bottom: 30px;
-        right: 1;
+        right: 0;
         border-radius: 50px;
         text-align: center;
         font-size: 30px;
